# leak-check

./: .gitignore  CLAUDE.md  Let me quickly examine the project struc.litcoffee  README.md  index.html  pyproject.toml  requirements.txt  run_leakcheck_server.ps1  start_all.bat
agents/: AGENTS.md
agents/prompts/: codex_full_remaining_remediation.md  codex_patch_slice_1_scoring_aggregation.md  codex_patch_slice_2_detectors_validators_cli.md
configs/: campaign.yaml  models.yaml  thresholds.yaml
data/interim/: learned_attacks.jsonl
data/raw/: prompts.jsonl  prompts_demo.jsonl
data/test_prepare_datasets/: records-5e0b8de1b66441dda6d5bef2373c6c9a.jsonl
prototype/: admin-attack-generator.html  admin-attack-generator.js  auth.js  chat.html  chat.js  database.js  index.html  login.html  register.css  register.html  register.js  script.js  server.js  signup.html  style.css
prototype/analysis/: leakageDetector.js  riskScorer.js
prototype/attack-generator/: attackTemplates.js  categoryMapper.js  csvLoader.js  mutationEngine.js
prototype/semantic/: README.md  requirements.txt  semantic_detector.py
scripts/: check_import_cycles.py  check_quality.py  prepare_datasets.py
src/leakcheck/: __main__.py  cli.py
src/leakcheck/attack/: mutate.py  operators.py  slm_strategy.py  static_strategy.py  strategies.py
tests/: test_dependency_hygiene.py  test_detection_smoke.py  test_mutation_determinism.py  test_prepare_datasets.py  test_repo_hygiene.py  test_reporting.py  test_run_utils.py  test_schemas.py  test_scoring.py  test_validators_registry.py  test_web_detection.py
(+45 files in other folders)
